small change to comments of movie-nav-row

--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -512,7 +512,7 @@
         /******************************************************************************/
 
         /* MOVIE NAV BUTTONS STYLING */
-        /* Styling for the row containing movie navigation buttons */
+        /* container/row controlling the rest of the nav elements */
         .movie-nav-row {
             /* Convert padding to rem for scalability */
             padding: 0.9375rem 0; /* Convert 15px padding to rem */
