--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap">
-    <!-- Updated Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
@@ -23,12 +22,16 @@
             border-radius: 0;
             height: auto; /* Adjusted to auto for flexible height */
         }
-        /* Responsive adjustments */
         @media (max-width: 768px) {
+            /* Disabling horizontal scrolling on mobile devices */
+            html, body {
+                overflow-x: hidden; /* Prevent horizontal scrolling */
+                max-width: 100%; /* Ensure body does not exceed the viewport width */
+            }
             .responsive-element {
                 width: 100%; /* Adjust width for smaller screens */
             }
-            /* Add more responsive styles as needed */
+            /* Additional responsive styles as needed */
         }
     </style>
 </head>
@@ -46,7 +49,6 @@
     {% include 'footer.html' %}
 </div>
 
-<!-- Bootstrap Bundle with Popper -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
