added cast-list-margin to media query

--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -658,7 +658,7 @@
 
             /* Cast List */
             .cast-list {
-                margin-top: 0; /* Adjust top margin */
+                margin-top: 10vh; /* Adjust top margin */
                 margin-left: 0; /* Adjust left margin */
             }
 
@@ -719,6 +719,13 @@
                 scrollbar-color: #888 #e0e0e0; /* Example: Style scrollbar for Firefox */
                 scrollbar-width: thin; /* Keep scrollbar width thin */
             }
+
+                    /* Custom style for bottom margin of the cast list */
+        .cast-list-margin {
+            margin-top: 18vh;
+            margin-bottom: 18.75rem; /* Assuming the base font size is 16px, this converts 300px to rem */
+        }
+
 
             /* Optional: Adjustments for the scrollbar, if you want to make it visible or style it */
             .cast-list::-webkit-scrollbar {
