fixed padding in set_filters.html

--- a/templates/set_filters.html
+++ b/templates/set_filters.html
@@ -137,6 +137,14 @@
                 padding: 0.25rem 0.5rem; /* Smaller padding on smaller screens */
                 font-size: 0.8rem; /* Smaller font size on smaller screens */
             }
+
+               /* Add this new style to center the content inside .form-check */
+        .form-check {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+        }
         }
 
 
