updated genre buttons for media query

--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -774,8 +774,15 @@
                 /* Other positioning or padding adjustments if necessary */
             }
 
+            /* Style adjustments for .genre-custom-button on mobile devices */
+        .genre-custom-button {
+            font-size: 0.75rem; /* Adjust the font size to reduce the overall button text size */
 
         }
+    }
+
+
+
 
 
         @media (max-width: 480px) {
