--- a/templates/movie.html
+++ b/templates/movie.html
@@ -1,62 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% extends "base.html" %}
 
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/movie_card.css') }}">
+{% endblock %}
 
-<style>
-        /* Prevent horizontal scrolling for all devices */
-        body, html {
-            overflow-x: hidden; /* Prevent horizontal overflow */
-            max-width: 100%; /* Ensure content does not exceed the viewport's width */
-        }
-
-        @media (max-width: 768px) {
-            /* Additional styles for mobile devices can be added here */
-        }
-    </style>
-
-
-
-<body>
-
-<!-- Include the navbar.html content -->
-{% include 'navbar.html' %}
-
-<!-- Main Content -->
-<div class="container ">
-
-    <!-- Include the movie_card.html content -->
+{% block content %}
+<div class="container">
     {% include 'movie_card.html' %}
-
 </div>
+{% endblock %}
 
-{% include 'footer.html' %}
-</body>
-
-
-</html>
-
-
+{% block scripts %}
 <script>
     function loadMovieWhenReady() {
         $.getJSON('/movie', function(data) {
             if (data.status === 'waiting') {
-                // If the movie isn't ready, check again after some time
-                setTimeout(loadMovieWhenReady, 1000); // Check every 2 seconds
+                setTimeout(loadMovieWhenReady, 1000);
             } else {
-                // If the movie data is ready, load the movie card content
                 $('#movie-content').html('<!-- Render movie_card.html content with the movie data -->');
-                // You might need to process 'data' to correctly display it within the movie card.
-                // This could be done by calling another function that takes 'data' and renders HTML.
             }
         });
     }
-
-    // Call the function when the script loads
     $(document).ready(function() {
         loadMovieWhenReady();
     });
 </script>
+{% endblock %}
+
