--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/navbar.css') }}">
-</head>
-<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- Adjusted for better visibility -->
     <!-- Navbar brand/logo can go here -->
 
@@ -17,7 +10,7 @@
         <div class="all-navbar-buttons-wrapper">
             <div class="logo-wrapper">
                 <a href="{{ url_for('home') }}" class="btn btn-logo">
-                    <img src="{{ url_for('static', filename='nextreel-wbg.png') }}">
+                    <img src="{{ url_for('static', filename='nextreel-wbg.png') }}" alt="Nextreel logo">
                 </a>
             </div>
             <div class="button-wrapper">
@@ -33,5 +26,3 @@
         </div>
     </div>
 </nav>
-</body>
-</html>
